--- a/Loginform/css/style.css
+++ b/Loginform/css/style.css
@@ -58,6 +58,7 @@ form h2 {
 }
 
 .input-div{
+    position: relative;
     display: grid;
     grid-template-columns: 7% 93%;
     margin: 25px 0;
@@ -65,7 +66,30 @@ form h2 {
     border-bottom: 2px solid #d9d9d9;
 }
 
-input-div.focus .i i {
+.input-div::before, .input-div::after{
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    width: 0;
+    height: 2px;
+    background-color: #38d39f;
+    transition: .5s;
+}
+
+.input-div::before{
+right: 50%;
+}
+
+.input-div::after{
+left: 50%
+}
+
+.input-div.focus::after, .input-div.focus::before {
+    width: 50%;
+
+}
+
+.input-div.focus .i i {
     color: #38d39f;
 }
 
@@ -93,6 +117,7 @@ input-div.focus .i i {
 
 .i i {
     color: #d9d9d9;
+    transition: .5s;
 }
 
 .input-div > div {
@@ -108,9 +133,6 @@ input-div.focus .i i {
     color: #999;
     font-size: 18px;
     transition: .3s;
-    display: none;
-
-
 }
 
 
@@ -153,10 +175,10 @@ color: #38d39f;
     border: none;
     background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
     cursor: pointer;
+    text-transform: uppercase;
     color: #fff;
     font-family: 'Poppins', sans-serif ;
     background-size: 200%;
-    text-transform: uppercase;
     transition: .5s;
 }
 
