--- a/Loginform/css/style.css
+++ b/Loginform/css/style.css
@@ -186,3 +186,37 @@ color: #38d39f;
     background-position: right;
 }
 
+@media screen and (max-width: 1050px) {
+    .container{
+        grid-gap: 5rem
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    form {
+        width: 290px;
+    }
+    form h2{
+        font-size: 2.4rem;
+    }
+
+    .img img {
+        width: 400px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .img{
+        display: none;
+    }
+    .container{
+        grid-template-columns: 1fr;
+    }
+
+    .wave{
+        display: none;
+    }
+    .login-container{
+        justify-content: center;
+    }
+}
